<resources>

    <string name="placeHolder" translatable="false">XXXXXX</string>
    <string name="app_name" translatable="false">BlaBl\'App</string>
    <string name="pseudo">pseudo</string>
    <string name="btn_name">Parlons</string>
    <string name="msg">Message</string>
    <string name="btn_env_name">Envoyer</string>
    <string name="messErrorPseudo">Veuillez entrer un pseudo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="removeForum">Supprimer le forum</string>
    <string name="askRemoveForum">Voulez-vous vraiment supprimer ce forum ?</string>
    <string name="deletedForum">Forum supprimé</string>
    <string name="notDeletedForum">Forum non supprimé</string>
    <string name="addForum">Ajouter un forum</string>
    <string name="addForumQuestion">Veuillez entrer le titre et la description du forum</string>
    <string name="forumName">Nom du forum</string>
    <string name="forumDescription">Description du forum</string>
    <string name="selectForum">Accéder à ce forum ?</string>
    <string name="selectingForum">Choisissez un forum</string>
    <string name="enterIp">Adresse IP de votre serveur</string>
    <string name="enterPort">"Port de votre serveur "</string>
    <string name="port">Port (5555 par défaut)</string>
    <string name="protocol">Protocole</string>
    <string name="changeServer">Configuration serveur</string>
    <string name="noConnection">Veuillez vous connecter à internet ou revoyez la configuration serveur</string>
    <string name="permissionDenied">Permission refusé</string>
    <string name="ip">Adresse IP (default Tchoutchou.ovh)</string>
    <string name="noConnectionTitle">Erreur dans l\'obtention des forums</string>
    <string name="correctIp">Veuillez entrer une adresse IP correcte</string>
    <string name="select">Sélectionner</string>
    <string name="add">Ajouter</string>
    <string name="cancel">Annuler</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="home">Accueil</string>
    <string name="forum">Forums</string>
    <string name="about_us">A propos de nous</string>
    <string name="aboutUs">A propos de nous</string>
    <string name="auteurs">Auteurs</string>
    <string name="mention_legal">Mentions légales</string>
    <string name="titre_objectifs">Objectifs</string>
    <string name="objectifs">Le but de cette application est de permettre aux utilisateurs de discuter entre eux.
Les utilisateurs peuvent rejoindre des salons de discussion et discuter avec les autres utilisateurs.</string>
    <string name="sigle">BlaBla\'App</string>
    <string name="legal_notices">
Cette application a été développée dans le cadre des nos études en BUT Informatique.
Nous ne sommes pas responsables des propos tenus par les utilisateurs.    </string>
    <string name="qypol342" translatable="false">qypol342</string>
    <string name="icepick4" translatable="false">icepick4</string>
    <string name="nabilesall" translatable="false">nabilesall</string>
    <string name="pp_nabile">photo de profil nabile sall</string>
    <string name="todo" translatable="false">todo</string>
    <string name="title_dashboard">Tableau de bord</string>
    <string name="send_msg">envoyer message</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">Accueil</string>
    <string name="profilePic">Photo de profile</string>
    <string name="Blabla_App_logo">BlaBla\'App logo</string>
    <string name="app" translatable="false">APP</string>
    <string name="api" translatable="false">API</string>
    <string name="serveurs">Serveurs</string>
    <string name="devSource">Développement d\'application</string>
    <string name="logo_with_name">Logo with name</string>
    <string name="info_plus">info plus</string>
    <string name="back">retour</string>
    <string name="settings">réglage</string>
</resources>