<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_top_bar"
        android:padding="10dp"
        android:scrollbars="none">

        <ImageView
            android:id="@+id/iconeBigSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:contentDescription="@string/logo_with_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/icbigsize" />

        <ImageView
            android:id="@+id/iconInfo"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/info_plus"
            android:src="@drawable/baseline_info_24"
            app:layout_constraintEnd_toEndOf="@+id/iconeBigSize"
            tools:layout_editor_absoluteY="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/cardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="30dp">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/defaultpp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView2"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="15dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ProfilPseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pseudo"
                android:inputType="textCapSentences"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp">

        <Button
            android:id="@+id/buttonTalk"
            style="@style/buttonpersonnalise"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/btn_name" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>