<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="false"
    android:foregroundGravity="fill"
    tools:ignore="MissingConstraints">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_image"
        android:contentDescription="@string/todo" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerAboutUs"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/background_top_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/icon"
            android:contentDescription="@string/app_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/iconBackBig"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iconBack"
                android:layout_width="40dp"
                android:layout_height="53dp"
                android:contentDescription="back"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/headerAboutUs"
       >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messageRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/headerAboutUs"
            />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="80"
            app:cardCornerRadius="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:filterTouchesWhenObscured="false"
                android:keyboardNavigationCluster="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userTexForMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/msg"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxHeight="120dp"
                    android:maxLength="256"
                    android:scrollbars="vertical"
/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sendMsg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue"
            android:clickable="true"
            android:contentDescription="@string/send_msg"
            app:srcCompat="@drawable/baseline_send_24" />

    </LinearLayout>

</RelativeLayout>